[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "delhivery-network-intelligence"
version = "0.1.0"
description = "Graph-based ETA and operations intelligence for logistics networks."
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["src"]
